tools/rust-parser/tests/fixtures/positive/datalog.tree
\datalog{
  \rel/links-to ?X @{https://example.com} -: {\rel/is-node ?X}
}
\datalog{
  ?related -: {\rel/links-to @{example} ?related} # {\rel/hidden ?related}
}
