tools/rust-parser/tests/fixtures/negative/datalog-hash-lbrace.tree
\datalog{?related -: {\rel/links-to @{example} ?related}#{\rel/hidden ?related}}
